examples/good/05-while-and-if.oo
int factorial = 1, ctr = 5 * factorial;

while (ctr > 0) {
    if (ctr == 1)
        print(factorial);
    else
        factorial = factorial * ctr;
    ctr--;
}

if (factorial == 120) print("5! = 120");
