examples/bad/syntax/missing-arrow.oo
<(int) : int> oneOrTwo = 
//    (int i) : int -> { 
    (int i) : int { 
        if (i == 1)
            return 1; 
        else
            return 2;
    };
